lots of changes, will the program still work?
